Set add-opens for lambdas